footer top subcription section done

--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
               <div class="subcription-title-box">
                 <span class="sub-title">subcription</span>
                 <h2 class="heading-title">
-                  Subscribe our weekly newsletter, get update anywhere
+                  Subscribe our weekly newsletter,<br />
+                  get update anywhere
                 </h2>
               </div>
               <form action="Method" class="subcription-form d-flex">
-                <input type="email" name="subcription-email" id="" />
+                <input
+                  type="email"
+                  placeholder="Enter Your Email"
+                  name="subcription-email"
+                  id=""
+                />
                 <input type="submit" value="Subscribe Now" />
               </form>
             </div>
