--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   get update anywhere
                 </h2>
               </div>
-              <form action="Method" class="subcription-form d-flex">
+              <form action="#" class="subcription-form d-flex">
                 <input
                   type="email"
                   placeholder="Enter Your Email"
