margin bug fixing

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                   <div class="thamnail-block">
                     <div class="iteam-blog-01">
                       <img
-                      src="./assets/images/latest-blog/blog-1.png"
+                      src="./assets/images/latest-blog/blog-2.png"
                       alt=""
                     />
                       <div class="blog-content v2-box">
                         <div class="content-wrapper v2">
                           <p id="sub-heading">
-                            LifeStyle
+                            creative
                           </p>
                           <h4>
                             Porta esteme rhoncus malesuada erme
@@ -167,13 +167,13 @@
                   <div class="thamnail-block">
                     <div class="iteam-blog-01 ">
                       <img
-                      src="./assets/images/latest-blog/blog-1.png"
+                      src="./assets/images/latest-blog/blog-3.png"
                       alt=""
                     />
                       <div class="blog-content v2-box">
                         <div class="content-wrapper v2">
                           <p id="sub-heading">
-                            LifeStyle
+                            startup
                           </p>
                           <h4>
                             Porta esteme rhoncus malesuada erme
@@ -193,13 +193,13 @@
                   <div class="thamnail-block ">
                     <div class="iteam-blog-01 ">
                       <img
-                      src="./assets/images/latest-blog/blog-1.png"
+                      src="./assets/images/latest-blog/blog-4.png"
                       alt=""
                     />
                       <div class="blog-content v2-box">
                         <div class="content-wrapper v2">
                           <p id="sub-heading">
-                            LifeStyle
+                            travel
                           </p>
                           <h4>
                             Porta esteme rhoncus malesuada erme
