--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="thamnail-block">
               <div class="iteam-blog-01">
                 <div class="iteam-imgage">
@@ -108,7 +108,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="row">
               <div class="col-lg-6 col-md-6">
                 <div class="thamnail-block">
