--- a/index.html
+++ b/index.html
@@ -63,6 +63,452 @@
         <div class="row"></div>
       </div>
     </header>
+
+    <!-- EDITOR PICKS SECTION START -->
+    <section id="editor-picks" class="editor-section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2 class="heading-title">editor picks</h2>
+            <p class="text-center">
+              Sagittis venenatis fames odio laoreet potenti vestibulum
+              parturient
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="editor-wrapper">
+              <div class="iteam-blog-01">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/editors-pic/big-1.png"
+                    alt="tour-pic"
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <p class="sub-heading">tours & travel</p>
+                  <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
+                  <span class="date">jan 26, 2021</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="editor-wrapper">
+              <div class="row">
+                <div class="col-lg-6 col-md-6">
+                  <div class="iteam-contentss middle-picks">
+                    <span class="sub-heading">lifestyle & fashion</span>
+                    <h4>
+                      Aenean diaman faucibus bel fames eter an cras dice of
+                      praesent
+                    </h4>
+                    <p>
+                      Sem egestas commodo id laoreet eleifend pede fusce gravida
+                      nece quis curae felis habitasse habitas lobortis amet
+                      blandit
+                    </p>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                  <div class="iteam-imagess">
+                    <img src="./assets/images/editors-pic/1.png" alt="" />
+                  </div>
+                </div>
+              </div>
+              <div class="row picks">
+                <div class="col-lg-6 col-md-6">
+                  <div class="iteam-imagess">
+                    <img src="./assets/images/editors-pic/2.png" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                  <div class="iteam-contentss right-picks">
+                    <span class="sub-heading">lifestyle & fashion</span>
+                    <h4>
+                      Aenean diaman faucibus bel fames eter an cras dice of
+                      praesent
+                    </h4>
+                    <p>
+                      Sem egestas commodo id laoreet eleifend pede fusce gravida
+                      nece quis curae felis habitasse habitas lobortis amet
+                      blandit
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-10">
+            <p class="banner-ads p-5 text-center">944 x 140 BANNER</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EDITOR PICKS SECTION END -->
+
+    <!-- FEATURED STORIES SECTION START -->
+    <section id="featured" class="featured-section">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title">
+            <h2 class="heading-title">featured stories</h2>
+            <p class="text-center">
+              Sagittis venenatis fames odio laoreet potenti vestibulum
+              parturient
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="owl-carousel featured-wrapper">
+            <div class="iteam iteam-blog-01">
+              <div class="iteam-image">
+                <img src="./assets/images/features/1.png" alt="fashion-news" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">
+                  beauty <span class="date">/ jan 26, 2021</span>
+                </p>
+                <h4>Nonummy platea sem mattis orci porttitor maecenas</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-comment-alt"></i>2 comments</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="iteam iteam-blog-01">
+              <div class="iteam-image">
+                <img src="./assets/images/features/2.png" alt="fashion-news" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">
+                  design <span class="date">/ jan 26, 2021</span>
+                </p>
+                <h4>Nonummy platea sem mattis orci porttitor maecenas</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-comment-alt"></i>2 comments</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="iteam iteam-blog-01">
+              <div class="iteam-image">
+                <img src="./assets/images/features/3.png" alt="fashion-news" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">
+                  business <span class="date">/ jan 26, 2021</span>
+                </p>
+                <h4>Nonummy platea sem mattis orci porttitor maecenas</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-comment-alt"></i>2 comments</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="iteam iteam-blog-01">
+              <div class="iteam-image">
+                <img src="./assets/images/features/4.png" alt="fashion-news" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">
+                  travel <span class="date">/ jan 26, 2021</span>
+                </p>
+                <h4>Nonummy platea sem mattis orci porttitor maecenas</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-comment-alt"></i>2 comments</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="iteam iteam-blog-01">
+              <div class="iteam-image">
+                <img src="./assets/images/features/5.png" alt="fashion-news" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">
+                  startup <span class="date">/ jan 26, 2021</span>
+                </p>
+                <h4>Nonummy platea sem mattis orci porttitor maecenas</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-comment-alt"></i>2 comments</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FEATURED STORIES SECTION END -->
+
+    <!-- FASHION NEWS SECTION START -->
+    <section id="fashion" class="fashion-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h2 class="heading-title">fashion news</h2>
+              <p class="text-center">
+                Sagittis venenatis fames odio laoreet potenti vestibulum
+                parturient
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-4">
+            <div class="fashion-wrapper">
+              <div class="iteam-blog-01">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/fashon-news/1.png"
+                    alt="fashion-news"
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <p class="sub-heading">
+                    model <span class="date">/ jan 26, 2021</span>
+                  </p>
+                  <h4>
+                    Srnare integer scelerisque lece mattis mauris facilisi
+                  </h4>
+                  <ul class="comments-link">
+                    <li>
+                      <a href="#"
+                        ><i class="far fa-comment-alt"></i>2 comments</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"><i class="far fa-heart"></i>0 like</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="fashion-wrapper">
+              <div class="iteam-blog-01">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/fashon-news/2.png"
+                    alt="fashion-news"
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <p class="sub-heading">
+                    celebrity <span class="date">/ jan 26, 2021</span>
+                  </p>
+                  <h4>Elementum pharetra ad ornare conubia erat cras just</h4>
+                  <ul class="comments-link">
+                    <li>
+                      <a href="#"
+                        ><i class="far fa-comment-alt"></i>2 comments</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"><i class="far fa-heart"></i>0 like</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="fashion-wrapper">
+              <div class="iteam-blog-01">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/fashon-news/3.png"
+                    alt="fashion-news"
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <p class="sub-heading">
+                    makeup <span class="date">/ jan 26, 2021</span>
+                  </p>
+                  <h4>
+                    Lacus molestie antes consequat class quisque nisler itself
+                  </h4>
+                  <ul class="comments-link">
+                    <li>
+                      <a href="#"
+                        ><i class="far fa-comment-alt"></i>2 comments</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"><i class="far fa-heart"></i>0 like</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FASHION NEWS SECTION END -->
+
+    <!-- TRAVEL BLOGS SECTION START -->
+    <section id="travel" class="travel-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h2 class="heading-title">travel news</h2>
+              <p class="text-center">
+                Sagittis venenatis fames odio laoreet potenti vestibulum
+                parturient
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <div class="travel-blog-wrapper">
+              <div class="iteam-blog-01">
+                <div class="travel-image">
+                  <img src="./assets/images/travels/big-1.png" alt="travel" />
+                </div>
+                <div class="travel-content">
+                  <p class="sub-heading">
+                    Business <span class="date">/ jan 26, 2021</span>
+                  </p>
+                  <h3>
+                    Sociosqu sem nisler egestas lacinia curae tristique primis
+                    sociosqu felis.
+                  </h3>
+                  <ul class="comments-link">
+                    <li>
+                      <a href="#"
+                        ><i class="far fa-comment-alt"></i>2 comments</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"><i class="far fa-heart"></i>0 like</a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="far fa-eye"></i>1k view</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div
+              class="
+                travel-right-blog
+                d-flex
+                align-iteams-center
+                justify-content-center
+              "
+            >
+              <div class="iteam-image">
+                <img src="./assets/images/travels/1.png" alt="travel-image" />
+              </div>
+              <div class="iteam-content align-self-center">
+                <span class="sub-heading">tourism</span>
+                <h4>Metus, vulputa lacinia incep tos dapibus ultricies</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-clock"></i>jan 25</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-eye"></i>1k view</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div
+              class="
+                travel-right-blog
+                d-flex
+                align-iteams-center
+                justify-content-center
+              "
+            >
+              <div class="iteam-image">
+                <img src="./assets/images/travels/2.png" alt="travel-image" />
+              </div>
+              <div class="iteam-content align-self-center">
+                <span class="sub-heading">fashion</span>
+                <h4>Metus, vulputa lacinia incep tos dapibus ultricies</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-clock"></i>jan 25</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-eye"></i>1k view</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div
+              class="
+                travel-right-blog
+                d-flex
+                align-iteams-center
+                justify-content-center
+              "
+            >
+              <div class="iteam-image">
+                <img src="./assets/images/travels/3.png" alt="travel-image" />
+              </div>
+              <div class="iteam-content align-self-center">
+                <span class="sub-heading">travel agency</span>
+                <h4>Metus, vulputa lacinia incep tos dapibus ultricies</h4>
+                <ul class="comments-link">
+                  <li>
+                    <a href="#"><i class="far fa-clock"></i>jan 25</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-heart"></i>0 like</a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="far fa-eye"></i>1k view</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- TRAVEL BLOGS SECTION END -->
+
     <!-- LATEST BLOGS SECTION START -->
     <section class="blog-section">
       <div class="container">
