--- a/index.html
+++ b/index.html
@@ -64,6 +64,73 @@
       </div>
     </header>
 
+    <!-- BANNER SECTION START -->
+    <section id="banner" class="banner-section">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="banner-wrapper">
+            <div class="iteam-block-01">
+              <div class="iteam-image">
+                <img src="./assets/images/banner/big-1.png" alt="banner" />
+              </div>
+              <div class="iteam-contents">
+                <p class="sub-heading">tours & travel</p>
+                <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
+                <p><span class="date">Jan 25 , 2021</span> . By mark alarm</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-7">
+          <div class="row">
+            <div class="col-lg-6 col-md-6">
+              <div class="middle-img">
+                <img src="./assets/images/banner/1.png" alt="banner" />
+              </div>
+              <div class="maddle-content">
+                <p class="sub-heading">Edit & Photgraphy</p>
+                <h3>
+                  fusce curen volutpat adiping ipsum habitant monis convallis
+                </h3>
+                <p><span class="date">Jan 25 , 2021</span> . By mark alarm</p>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="banner-right">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/banner/right-1.png"
+                    alt=""
+                    srcset=""
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <span class="sub-heading">lifestyle</span>
+                  <h4>
+                    Nunc lectus fames tristique fusce nascetur rutrum morbi
+                  </h4>
+                </div>
+              </div>
+              <div class="banner-right">
+                <div class="iteam-image">
+                  <img
+                    src="./assets/images/banner/right-2.png"
+                    alt=""
+                    srcset=""
+                  />
+                </div>
+                <div class="iteam-contents">
+                  <span class="sub-heading">fashion</span>
+                  <h4>Enim porta hac suscipit maec purus erat penatibus.</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- BANNER SECTION END -->
+
     <!-- EDITOR PICKS SECTION START -->
     <section id="editor-picks" class="editor-section">
       <div class="container">
