banner markup done

--- a/index.html
+++ b/index.html
@@ -129,6 +129,37 @@
         </div>
       </div>
     </section>
+    <section class="banner-bottom-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <div class="row">
+              <div class="col-lg-6 col-lg-6">
+                <div class="left-content">
+                  <img src="./assets/images/banner-bottom/1.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6 col-lg-6">
+                <div class="left-content">
+                  <span class="sub-heading">birthday element</span>
+                  <div>
+                    Rhoncus nece risuse lectus the convallis varius do consequat
+                    feugiat to dolor
+                  </div>
+                  <p><span class="date">jan 26 .</span> By daniel ford</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <img src="./assets/images/banner-bottom/2.png" alt="">
+          </div>
+          <div class="col-lg-3">
+            <img src="./assets/images/banner-bottom/3.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- BANNER SECTION END -->
 
     <!-- EDITOR PICKS SECTION START -->
