banner section done

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <a href="#"><i class="fas fa-search"></i></a>
                 </div>
                 <div class="search-btn">
-                  <a href="#" class="btn btn-outline-danger">subscribe</a>
+                  <a href="#" class="btn btn-color">subscribe</a>
                 </div>
               </div>
             </div>
@@ -143,14 +143,17 @@
       <div class="row">
         <div class="col-lg-5">
           <div class="banner-wrapper">
-            <div class="iteam-block-01">
+            <div class="iteam-blog-01">
               <div class="iteam-image">
                 <img src="./assets/images/banner/big-1.png" alt="banner" />
               </div>
               <div class="iteam-contents">
                 <p class="sub-heading">tours & travel</p>
                 <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
-                <p><span class="date">Jan 25 , 2021</span> . By mark alarm</p>
+                <p>
+                  <span class="date">Jan 25 , 2021</span>
+                  <span class="man">. By mark alarm</span>
+                </p>
               </div>
             </div>
           </div>
@@ -158,16 +161,32 @@
         <div class="col-lg-7">
           <div class="row">
             <div class="col-lg-6 col-md-6">
-              <div class="middle-img">
+              <div class="banner-card">
+                <img src="./assets/images/banner/1.png" />
+                <div class="middle-content">
+                  <p class="sub-heading">Edit & Photgraphy</p>
+                  <h3>
+                    fusce curen volutpat adiping ipsum habitant monis convallis
+                  </h3>
+                  <p class="meta-box">
+                    <span class="date">Jan 25 , 2021</span>
+                    <span class="man">. By mark alarm</span>
+                  </p>
+                </div>
+              </div>
+              <!-- <div class="overlay-wrapper">
                 <img src="./assets/images/banner/1.png" alt="banner" />
-              </div>
-              <div class="maddle-content">
-                <p class="sub-heading">Edit & Photgraphy</p>
-                <h3>
-                  fusce curen volutpat adiping ipsum habitant monis convallis
-                </h3>
-                <p><span class="date">Jan 25 , 2021</span> . By mark alarm</p>
-              </div>
+                <div class="middle-content">
+                  <p class="sub-heading">Edit & Photgraphy</p>
+                  <h3>
+                    fusce curen volutpat adiping ipsum habitant monis convallis
+                  </h3>
+                  <p class="meta-box">
+                    <span class="date">Jan 25 , 2021</span>
+                    <span class="man">. By mark alarm</span>
+                  </p>
+                </div>
+              </div> -->
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="banner-right">
@@ -214,42 +233,41 @@
               class="banner-iteam-blocks-wrapper d-flex justify-content-center"
             >
               <img src="./assets/images/banner-bottom/1.png" alt="" />
-              <div class="left-content">
+              <div class="content-wish">
                 <span class="sub-heading">birthday element</span>
-                <div>
+                <h4 class="description">
                   Rhoncus nece risuse lectus the convallis varius do consequat
                   feugiat to dolor
-                </div>
-                <p><span class="date">jan 26 .</span> By daniel ford</p>
+                </h4>
+                <p class="meta-box">
+                  <span class="date">jan 26 .</span>
+                  <span class="man">By daniel ford</span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="element-wrapper">
+            <div class="banner-single-element">
               <div class="overlay-img">
                 <img src="./assets/images/banner-bottom/2.png" alt="" />
-                <div class="element-content element-overlay text-left">
-                  <div class="overlay-content">
-                    <h5>LifeStyle</h5>
-                    <h4>
-                      <a href="#"> Rhoncus nullam libero mellent mattis </a>
-                    </h4>
-                  </div>
+                <div class="overlay-content">
+                  <span class="sub-heading">wedding</span>
+                  <h4>
+                    <a href="#"> Rhoncus nullam libero mellent mattis </a>
+                  </h4>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <div class="element-wrapper">
+            <div class="banner-single-element">
               <div class="overlay-img">
                 <img src="./assets/images/banner-bottom/3.png" alt="" />
-                <div class="element-content element-overlay text-left">
-                  <div class="overlay-content">
-                    <h5>LifeStyle</h5>
-                    <h4>
-                      <a href="#"> Rhoncus nullam libero mellent mattis </a>
-                    </h4>
-                  </div>
+                <div class="overlay-content">
+                  <span class="sub-heading">lifestyle</span>
+                  <h4>
+                    <a href="#"> Rhoncus nullam libero mellent mattis </a>
+                  </h4>
                 </div>
               </div>
             </div>
@@ -281,10 +299,12 @@
                     alt="tour-pic"
                   />
                 </div>
-                <div class="iteam-contents">
+                <div class="iteam-blog-content">
                   <p class="sub-heading">tours & travel</p>
                   <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
-                  <span class="date">jan 26, 2021</span>
+                  <p class="meta">
+                    Jan 25 , 2021 . <span class="editor">By mark alarm</span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -307,16 +327,12 @@
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                  <div class="iteam-imagess">
-                    <img src="./assets/images/editors-pic/1.png" alt="" />
-                  </div>
+                  <img src="./assets/images/editors-pic/1.png" alt="" />
                 </div>
               </div>
               <div class="row picks">
                 <div class="col-lg-6 col-md-6">
-                  <div class="iteam-imagess">
-                    <img src="./assets/images/editors-pic/2.png" alt="" />
-                  </div>
+                  <img src="./assets/images/editors-pic/2.png" alt="" />
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="iteam-contentss right-picks">
@@ -591,7 +607,7 @@
                 <div class="travel-image">
                   <img src="./assets/images/travels/big-1.png" alt="travel" />
                 </div>
-                <div class="travel-content">
+                <div class="iteam-blog-content travel-content">
                   <p class="sub-heading">
                     Business <span class="date">/ jan 26, 2021</span>
                   </p>
@@ -704,13 +720,13 @@
     </section>
     <!-- TRAVEL BLOGS SECTION END -->
 
-    <!-- LATEST BLOGS SECTION START -->
+    <!-- LATEST NEWS SECTION START -->
     <section class="blog-section">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="section-title">
-              <h2 class="heading-title">travel news</h2>
+              <h2 class="heading-title">latest news</h2>
               <p class="text-center">
                 Sagittis venenatis fames odio laoreet potenti vestibulum
                 parturient
@@ -760,7 +776,7 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-blog-content right-content">
+                    <div class="iteam-contents">
                       <p class="sub-heading">lifestyle</p>
                       <h4>Porta esteme rhoncus malesuada erme</h4>
                       <ul class="comments-link mb-0">
@@ -781,7 +797,7 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-blog-content right-content">
+                    <div class="iteam-contents">
                       <p class="sub-heading">creative</p>
                       <h4>Porta esteme rhoncus malesuada erme</h4>
                       <ul class="comments-link mb-0">
@@ -802,7 +818,7 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-blog-content right-content">
+                    <div class="iteam-contents">
                       <p class="sub-heading">startup</p>
                       <h4>Porta esteme rhoncus malesuada erme</h4>
                       <ul class="comments-link mb-0">
@@ -823,7 +839,7 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-blog-content right-content">
+                    <div class="iteam-contents">
                       <p class="sub-heading">travel</p>
                       <h4>Porta esteme rhoncus malesuada erme</h4>
                       <ul class="comments-link mb-0">
@@ -840,7 +856,7 @@
         </div>
       </div>
     </section>
-    <!-- LATEST BLOGS SECTION END -->
+    <!-- LATEST NEWS SECTION END -->
     <section class="subcription-section">
       <div class="container">
         <div class="row">
