--- a/index.html
+++ b/index.html
@@ -47,17 +47,15 @@
     <header id="headeer">
       <div class="header-top-section">
         <div class="container">
-          <div class="row">
-            <div class="header-top-contents">
-              <p class="breaking-news">breaking news:</p>
-              <p>
-                Uganda security forces withdraw from Bobi Wine's home ending 11
-                days of house arrest !
-              </p>
-              <p class="read-more-btn">
-                <a href="#">read more <i class="fas fa-arrow-right"></i></a>
-              </p>
-            </div>
+          <div class="header-top-contents">
+            <p class="breaking-news">breaking news:</p>
+            <p>
+              Uganda security forces withdraw from Bobi Wine's home ending 11
+              days of house arrest !
+            </p>
+            <p class="read-more-btn">
+              <a href="#">read more <i class="fas fa-arrow-right"></i></a>
+            </p>
           </div>
         </div>
       </div>
@@ -140,83 +138,52 @@
 
     <!-- BANNER SECTION START -->
     <section id="banner" class="banner-section">
-      <div class="row">
-        <div class="col-lg-5">
-          <div class="banner-wrapper">
-            <div class="iteam-blog-01">
-              <div class="iteam-image">
-                <img src="./assets/images/banner/big-1.png" alt="banner" />
-              </div>
-              <div class="iteam-contents">
-                <p class="sub-heading">tours & travel</p>
-                <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
-                <p>
-                  <span class="date">Jan 25 , 2021</span>
-                  <span class="man">. By mark alarm</span>
-                </p>
-              </div>
+      <div class="banner-wrapper">
+        <div class="banner-column-left">
+          <div class="iteam-image">
+            <img src="./assets/images/banner/big-2.png" alt="banner" />
+          </div>
+          <div class="iteam-contents">
+            <p class="sub-heading">tours & travel</p>
+            <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
+            <p>
+              <span class="date">Jan 25 , 2021</span>
+              <span class="man">. By mark alarm</span>
+            </p>
+          </div>
+        </div>
+        <div class="banner-column-middle">
+          <div class="banner-card">
+            <img src="./assets/images/banner/1.png" />
+            <div class="middle-content">
+              <p class="sub-heading">Edit & Photgraphy</p>
+              <h3>
+                fusce curen volutpat adiping ipsum habitant monis convallis
+              </h3>
+              <p class="meta-box">
+                <span class="date">Jan 25 , 2021</span>
+                <span class="man">. By mark alarm</span>
+              </p>
             </div>
           </div>
         </div>
-        <div class="col-lg-7">
-          <div class="row">
-            <div class="col-lg-6 col-md-6">
-              <div class="banner-card">
-                <img src="./assets/images/banner/1.png" />
-                <div class="middle-content">
-                  <p class="sub-heading">Edit & Photgraphy</p>
-                  <h3>
-                    fusce curen volutpat adiping ipsum habitant monis convallis
-                  </h3>
-                  <p class="meta-box">
-                    <span class="date">Jan 25 , 2021</span>
-                    <span class="man">. By mark alarm</span>
-                  </p>
-                </div>
-              </div>
-              <!-- <div class="overlay-wrapper">
-                <img src="./assets/images/banner/1.png" alt="banner" />
-                <div class="middle-content">
-                  <p class="sub-heading">Edit & Photgraphy</p>
-                  <h3>
-                    fusce curen volutpat adiping ipsum habitant monis convallis
-                  </h3>
-                  <p class="meta-box">
-                    <span class="date">Jan 25 , 2021</span>
-                    <span class="man">. By mark alarm</span>
-                  </p>
-                </div>
-              </div> -->
+        <div class="banner-column-right">
+          <div class="banner-right">
+            <div class="iteam-image">
+              <img src="./assets/images/banner/right-1.png" alt="" srcset="" />
             </div>
-            <div class="col-lg-6 col-md-6">
-              <div class="banner-right">
-                <div class="iteam-image">
-                  <img
-                    src="./assets/images/banner/right-1.png"
-                    alt=""
-                    srcset=""
-                  />
-                </div>
-                <div class="iteam-contents">
-                  <span class="sub-heading">lifestyle</span>
-                  <h4>
-                    Nunc lectus fames tristique fusce nascetur rutrum morbi
-                  </h4>
-                </div>
-              </div>
-              <div class="banner-right">
-                <div class="iteam-image">
-                  <img
-                    src="./assets/images/banner/right-2.png"
-                    alt=""
-                    srcset=""
-                  />
-                </div>
-                <div class="iteam-contents">
-                  <span class="sub-heading">fashion</span>
-                  <h4>Enim porta hac suscipit maec purus erat penatibus.</h4>
-                </div>
-              </div>
+            <div class="iteam-contents">
+              <span class="sub-heading">lifestyle</span>
+              <h4>Nunc lectus fames tristique fusce nascetur rutrum morbi</h4>
+            </div>
+          </div>
+          <div class="banner-right">
+            <div class="iteam-image">
+              <img src="./assets/images/banner/right-2.png" alt="" srcset="" />
+            </div>
+            <div class="iteam-contents">
+              <span class="sub-heading">fashion</span>
+              <h4>Enim porta hac suscipit maec purus erat penatibus.</h4>
             </div>
           </div>
         </div>
@@ -889,7 +856,7 @@
         <div class="row">
           <div class="col-12">
             <div class="footer-logo">
-              <img src="./assets/images/logo/logo.png" alt="logo" />
+              <img src="./assets/images/logo/footer-logo.png" alt="logo" />
             </div>
           </div>
           <div class="col-12">
