--- a/index.html
+++ b/index.html
@@ -61,24 +61,20 @@
       </div>
       <div class="header-middle-section">
         <div class="container">
-          <div class="row align-iteams-center">
-            <div class="col-lg-3">
-              <div class="header-social-icon">
-                <a class="#" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-pinterest-p"></i></a>
-              </div>
+          <div class="header-middle-wrapper">
+            <div class="header-social-icon">
+              <a class="#" href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#"><i class="fab fa-pinterest-p"></i></a>
             </div>
-            <div class="col-lg-6">
-              <div class="logo d-lg-block d-none">
-                <a href="#"
-                  ><img src="./assets/images/logo/logo.png" alt="rosen-logo"
-                /></a>
-              </div>
+            <div class="logo d-lg-block d-none">
+              <a href="#"
+                ><img src="./assets/images/logo/logo.png" alt="rosen-logo"
+              /></a>
             </div>
-            <div class="col-lg-3">
-              <div class="search-bar d-flex align-iteams-center">
+            <div class="search-bar">
+              <div class="search-wrapper d-flex">
                 <div class="search-icon-bar">
                   <a href="#"><i class="fas fa-search"></i></a>
                 </div>
@@ -329,7 +325,7 @@
     <!-- EDITOR PICKS SECTION END -->
 
     <!-- FEATURED STORIES SECTION START -->
-    <section id="featured" class="featured-section">
+    <!-- <section id="featured" class="featured-section">
       <div class="row">
         <div class="col-12">
           <div class="section-title">
@@ -442,7 +438,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- FEATURED STORIES SECTION END -->
 
     <!-- FASHION NEWS SECTION START -->
@@ -568,7 +564,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6 col-md-6">
+          <div class="col-lg-7">
             <div class="travel-blog-wrapper">
               <div class="iteam-blog-01">
                 <div class="travel-image">
@@ -599,17 +595,18 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div
-              class="
-                travel-right-blog
-                d-flex
-                align-iteams-center
-                justify-content-center
-              "
-            >
-              <div class="iteam-image">
+          <div class="col-lg-5">
+            <div class="travel-right-blog">
+              <div class="iteam-image fancy-video">
                 <img src="./assets/images/travels/1.png" alt="travel-image" />
+                <a
+                  data-fancybox=""
+                  data-width="640"
+                  data-height="360"
+                  class="video-btn"
+                  href="https://youtu.be/MPUBSZYESgU"
+                  ><i class="fas fa-play"></i
+                ></a>
               </div>
               <div class="iteam-content align-self-center">
                 <span class="sub-heading">tourism</span>
@@ -627,18 +624,11 @@
                 </ul>
               </div>
             </div>
-            <div
-              class="
-                travel-right-blog
-                d-flex
-                align-iteams-center
-                justify-content-center
-              "
-            >
+            <div class="travel-right-blog">
               <div class="iteam-image">
                 <img src="./assets/images/travels/2.png" alt="travel-image" />
               </div>
-              <div class="iteam-content align-self-center">
+              <div class="iteam-content align-items-center">
                 <span class="sub-heading">fashion</span>
                 <h4>Metus, vulputa lacinia incep tos dapibus ultricies</h4>
                 <ul class="comments-link">
@@ -654,14 +644,7 @@
                 </ul>
               </div>
             </div>
-            <div
-              class="
-                travel-right-blog
-                d-flex
-                align-iteams-center
-                justify-content-center
-              "
-            >
+            <div class="travel-right-blog">
               <div class="iteam-image">
                 <img src="./assets/images/travels/3.png" alt="travel-image" />
               </div>
@@ -708,12 +691,15 @@
                 <div class="iteam-imgage">
                   <img src="./assets/images/latest-blog/big-1.png" alt="" />
                 </div>
-                <div class="iteam-blog-content">
+                <div class="iteam-blog-content thamnail-content">
                   <p id="sub-heading">
                     Business <span class="date">/ jan 26, 2021</span>
                   </p>
                   <h3>
-                    Phasellus bulume erat nonummy fusce quis ested torquent
+                    <a href="#"
+                      >Phasellus bulume erat nonummy fusce quis ested
+                      torquent</a
+                    >
                   </h3>
                   <ul class="comments-link">
                     <li>
@@ -735,7 +721,7 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-lg-6 col-md-6">
-                <div class="thamnail-block">
+                <div class="thamnail-block-right">
                   <div class="iteam-blog-01">
                     <div class="iteam-imgage">
                       <img
@@ -743,20 +729,18 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-contents">
-                      <p class="sub-heading">lifestyle</p>
-                      <h4>Porta esteme rhoncus malesuada erme</h4>
-                      <ul class="comments-link mb-0">
-                        <li>
-                          <a href="#">jan 25, 2021</a>
-                        </li>
-                      </ul>
+                    <div class="iteam-contents box-content">
+                      <span class="sub-heading">lifestyle</span>
+                      <h4>
+                        <a href="#">Porta esteme rhoncus malesuada erme</a>
+                      </h4>
+                      <a class="date" href="#">jan 25, 2021</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6">
-                <div class="thamnail-block">
+                <div class="thamnail-block-right">
                   <div class="iteam-blog-01">
                     <div class="iteam-imgage">
                       <img
@@ -764,20 +748,18 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-contents">
-                      <p class="sub-heading">creative</p>
-                      <h4>Porta esteme rhoncus malesuada erme</h4>
-                      <ul class="comments-link mb-0">
-                        <li>
-                          <a href="#">jan 25, 2021</a>
-                        </li>
-                      </ul>
+                    <div class="iteam-contents box-content">
+                      <span class="sub-heading">creative</span>
+                      <h4>
+                        <a href="#">Porta esteme rhoncus malesuada erme</a>
+                      </h4>
+                      <a class="date" href="#">jan 25, 2021</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6">
-                <div class="thamnail-block">
+                <div class="thamnail-block-right">
                   <div class="iteam-blog-01">
                     <div class="iteam-imgage">
                       <img
@@ -785,20 +767,18 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-contents">
-                      <p class="sub-heading">startup</p>
-                      <h4>Porta esteme rhoncus malesuada erme</h4>
-                      <ul class="comments-link mb-0">
-                        <li>
-                          <a href="#">jan 25, 2021</a>
-                        </li>
-                      </ul>
+                    <div class="iteam-contents box-content">
+                      <span class="sub-heading">startup</span>
+                      <h4>
+                        <a href="#">Porta esteme rhoncus malesuada erme</a>
+                      </h4>
+                      <a class="date" href="#">jan 25, 2021</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6">
-                <div class="thamnail-block">
+                <div class="thamnail-block-right">
                   <div class="iteam-blog-01">
                     <div class="iteam-imgage">
                       <img
@@ -806,14 +786,12 @@
                         alt="blog-1"
                       />
                     </div>
-                    <div class="iteam-contents">
-                      <p class="sub-heading">travel</p>
-                      <h4>Porta esteme rhoncus malesuada erme</h4>
-                      <ul class="comments-link mb-0">
-                        <li>
-                          <a href="#">jan 25, 2021</a>
-                        </li>
-                      </ul>
+                    <div class="iteam-contents box-content">
+                      <span class="sub-heading">travel</span>
+                      <h4>
+                        <a href="#">Porta esteme rhoncus malesuada erme</a>
+                      </h4>
+                      <a class="date" href="#">jan 25, 2021</a>
                     </div>
                   </div>
                 </div>
@@ -844,7 +822,7 @@
                   name="subcription-email"
                   id=""
                 />
-                <input class="p-3" type="submit" value="Subscribe Now" />
+                <input class="p-3 mt-3" type="submit" value="Subscribe Now" />
               </form>
             </div>
           </div>
