--- a/index.html
+++ b/index.html
@@ -61,25 +61,42 @@
       </div>
       <div class="header-middle-section">
         <div class="container">
-          <div class="header-middle-wrapper">
-            <div class="header-social-icon">
-              <a class="#" href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              <a href="#"><i class="fab fa-pinterest-p"></i></a>
-            </div>
-            <div class="logo d-lg-block d-none">
-              <a href="#"
-                ><img src="./assets/images/logo/logo.png" alt="rosen-logo"
-              /></a>
-            </div>
-            <div class="search-bar">
-              <div class="search-wrapper d-flex">
-                <div class="search-icon-bar">
-                  <a href="#"><i class="fas fa-search"></i></a>
+          <div class="row">
+            <div class="col-12">
+              <div class="header-middle-wrapper">
+                <div class="header-social-icon">
+                  <a class="#" href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#"><i class="fab fa-pinterest-p"></i></a>
                 </div>
-                <div class="search-btn">
-                  <a href="#" class="btn btn-color">subscribe</a>
+                <div class="logo d-lg-block d-none">
+                  <a href="./index.html"
+                    ><img src="./assets/images/logo/logo.png" alt="rosen-logo"
+                  /></a>
+                </div>
+                <div class="header-search-wrapper d-flex">
+                  <div class="search-bar d-flex">
+                    <div class="search-icon-bar">
+                      <a href="#"><i class="fas fa-search"></i></a>
+                    </div>
+                    <div class="search-popup">
+                      <form action="#" class="search-form">
+                        <input
+                          class="search-input"
+                          name="search"
+                          placeholder="Search Your Topic"
+                          type="text"
+                        />
+                        <button class="btn" type="submit">
+                          <i class="fas fa-search"></i>
+                        </button>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="search-btn">
+                    <a href="#" class="btn btn-color">subscribe</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -124,7 +141,7 @@
             </div>
             <button class="navbar-toggler">
               <span class="navbar-toggler-icons">
-                <i class="ti-menu"></i>
+                <i class="fas fa-align-justify"></i>
               </span>
             </button>
           </div>
@@ -325,19 +342,21 @@
     <!-- EDITOR PICKS SECTION END -->
 
     <!-- FEATURED STORIES SECTION START -->
-    <!-- <section id="featured" class="featured-section">
-      <div class="row">
-        <div class="col-12">
-          <div class="section-title">
-            <h2 class="heading-title">featured stories</h2>
-            <p class="text-center">
-              Sagittis venenatis fames odio laoreet potenti vestibulum
-              parturient
-            </p>
+    <section id="featured" class="featured-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h2 class="heading-title">featured stories</h2>
+              <p class="text-center">
+                Sagittis venenatis fames odio laoreet potenti vestibulum
+                parturient
+              </p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <div class="owl-carousel featured-wrapper">
             <div class="iteam iteam-blog-01">
@@ -437,8 +456,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section> -->
+      </div> -->
+    </section>
     <!-- FEATURED STORIES SECTION END -->
 
     <!-- FASHION NEWS SECTION START -->
