--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="iteam-contents">
             <p class="sub-heading">tours & travel</p>
             <h3>Hymenaeos pretium odio etiam abitasse sociis eros</h3>
-            <p>
+            <p class="meta-desciptions">
               <span class="date">Jan 25 , 2021</span>
               <span class="man">. By mark alarm</span>
             </p>
@@ -190,11 +190,11 @@
               <h4>Nunc lectus fames tristique fusce nascetur rutrum morbi</h4>
             </div>
           </div>
-          <div class="banner-right">
+          <div class="banner-right right-box-v2">
             <div class="iteam-image">
               <img src="./assets/images/banner/right-2.png" alt="" srcset="" />
             </div>
-            <div class="iteam-contents">
+            <div class="iteam-contents right-v2">
               <span class="sub-heading">fashion</span>
               <h4>Enim porta hac suscipit maec purus erat penatibus.</h4>
             </div>
@@ -209,19 +209,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6">
-            <div
-              class="banner-iteam-blocks-wrapper d-flex justify-content-center"
-            >
+            <div class="banner-iteam-blocks-wrapper">
               <img src="./assets/images/banner-bottom/1.png" alt="" />
               <div class="content-wish">
                 <span class="sub-heading">birthday element</span>
                 <h4 class="description">
-                  Rhoncus nece risuse lectus the convallis varius do consequat
-                  feugiat to dolor
+                  <a href="#">
+                    Rhoncus nece risuse lectus the convallis varius do consequat
+                    feugiat to dolor</a
+                  >
                 </h4>
                 <p class="meta-box">
-                  <span class="date">jan 26 .</span>
-                  <span class="man">By daniel ford</span>
+                  <a href="#" class="date">jan 26 .</a>
+                  <a href="#" class="man">By daniel ford</a>
                 </p>
               </div>
             </div>
@@ -271,7 +271,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <div class="editor-wrapper">
+            <div class="editor-wrapper big-pic">
               <div class="iteam-blog-01">
                 <div class="iteam-image">
                   <img
@@ -489,7 +489,9 @@
                     model <span class="date">/ jan 26, 2021</span>
                   </p>
                   <h4>
-                    Srnare integer scelerisque lece mattis mauris facilisi
+                    <a href="#"
+                      >Srnare integer scelerisque lece mattis mauris facilisi</a
+                    >
                   </h4>
                   <ul class="comments-link">
                     <li>
@@ -518,7 +520,11 @@
                   <p class="sub-heading">
                     celebrity <span class="date">/ jan 26, 2021</span>
                   </p>
-                  <h4>Elementum pharetra ad ornare conubia erat cras just</h4>
+                  <h4>
+                    <a href="#"
+                      >Elementum pharetra ad ornare conubia erat cras just</a
+                    >
+                  </h4>
                   <ul class="comments-link">
                     <li>
                       <a href="#"
@@ -547,7 +553,10 @@
                     makeup <span class="date">/ jan 26, 2021</span>
                   </p>
                   <h4>
-                    Lacus molestie antes consequat class quisque nisler itself
+                    <a href="#"
+                      >Lacus molestie antes consequat class quisque nisler
+                      itself</a
+                    >
                   </h4>
                   <ul class="comments-link">
                     <li>
